--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,16 +1,63 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>News_Scraper</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: white;
+}
+.h1 {
+  height: 100%; 
+  width: 30%;
+  padding: 14px 16px;
+  font-size: 40px;
+  border: 2px solid black;
+  padding: 20px;
+  border-radius: 25px;
+}
+</style>
+
 </head>
 <body>
     <div class="jumbotron">
-        <center><h1>News_Scraper</h1>
-           <a href="/" class="btn btn-danger">Refresh News</a>
-        </form>
+        <center><h1 class="h1"> News Scraper </h1>
+           
     </center>
     </div>
+
+    <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href="{% url 'prothomalo' %}">Prothom Alo</a></li>
+        <li><a href="{% url 'bdnews24' %}">BdNews24</a></li>
+        <li><a href="{% url 'theDailyStar' %}">The Daily Star</a></li>
+        <li><a href="{% url 'dhakatribune' %}">Dhaka Tribune</a></li>
+    </ul>
+    <div></br></br></br></div>
     <div class="container">
         <div class="row">
             <div class="col-6">
