--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -4,7 +4,9 @@
 <html>
 <head>
     <title>News Scraper</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <style>
 ul {
   list-style-type: none;
@@ -43,7 +45,7 @@ li a:hover:not(.active) {
 </head>
 <body>
     <div class="jumbotron">
-        <center><h1 class="h1"> News Scraper </h1>
+        <center><h1 class="h1"> Get news in one click </h1>
            
     </center>
     </div>
@@ -59,14 +61,19 @@ li a:hover:not(.active) {
     </ul>
     <div></br></br></br></div>
     <div class="container">
-        <div class="row">
+      <div class="w3-container">
             <div class="col-6">
-                    <h3 class="text-centre"> News from {{name}}</h3>
+                    <h2 class=" text-centre"> News from {{name}}</h2>
+                    
                     {% for p in post %}
-                    <h5> -  {{p}} </h5>
-                    <hr>
+                    <div class="w3-panel w3-pale-green w3-leftbar w3-sand ">
+                    <p>
+                    <h5> {{p}} </h5>
+                    </p>
+          
+                  </div>
                     {% endfor %}
-                    <br>
+                    
             </div>
             
             
